# SFMLGameEngine

./: CMakeLists.txt  README.md  main.cpp  scenesCollection.hpp
example/: CMakeLists.txt  apple.hpp  banana.hpp  bee.hpp  frog.cpp  frog.hpp  fruit.hpp  platform.hpp  rhino.hpp  saw.hpp  scenesCollection.cpp  strawberry.hpp
example/EngineDirectory/: collision.hpp  component.hpp  engine.hpp  scene.hpp  semaphore.hpp  spriteSheet.hpp  text.hpp  uiNode.hpp
hpp/: animatedSprite.hpp  collision.hpp  component.hpp  emptyNode.hpp  engine.hpp  node.hpp  scene.hpp  sceneManager.hpp  semaphore.hpp  sprite.hpp  spriteSheet.hpp  text.hpp  uiNode.hpp
src/: animatedSprite.cpp  collision.cpp  component.cpp  emptyNode.cpp  engine.cpp  node.cpp  scene.cpp  sceneManager.cpp  sprite.cpp  spriteSheet.cpp  text.cpp  uiNode.cpp
